# LZip

./: .gitignore  CMakeLists.txt  COPYING.md  FILESTRUCTURE.md  README.md  TODO.md
app/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  lzip_app.cpp
app/app/: Makefile  cmake_install.cmake  encode  lzip
app/ext/Catch2/: CTestTestfile.cmake  Makefile  cmake_install.cmake
app/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  tests  tests_include-b12d07c.cmake  tests_tests-b12d07c.cmake
doc/: CMakeLists.txt  conf.py  index.rst
include/lzip/: bitio.hpp  cli.hpp  decoder.hpp  dictionary.hpp  encoder.hpp  lzip.hpp
tests/: CMakeLists.txt  file_tests.cpp  lzip_t.cpp  performance_tests.cpp
